--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ECOMMERCE | ONLINE STORE</title>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    /*<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css2?family=poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">*/
 </head>
 
 <body>
